Closed Bug 1408582 Opened 7 years ago Closed 7 years ago

Android builds are going to permafail when Gecko 58 merges to Beta on 2017-11-02

Categories

(Core :: WebRTC, defect, P2)

All
Android
defect

Tracking

()

VERIFIED FIXED
mozilla58
Tracking Status
firefox-esr52 --- unaffected
firefox56 --- unaffected
firefox57 --- unaffected
firefox58 blocking verified

People

(Reporter: RyanVM, Assigned: dminor)

References

Details

Attachments

(1 file)

[Tracking Requested - why for this release]: Busted Android builds on the next merge day. https://treeherder.mozilla.org/logviewer.html#?job_id=136933745&repo=try /builds/worker/workspace/build/src/media/webrtc/signaling/src/common/browser_logging/CSFLog.cpp:85:21: error: unused variable 'level' [-Werror=unused-variable] Patch below should suffice to reproduce locally: https://hg.mozilla.org/try/rev/a9418c4ef938b9c693f792bddbe1885129c6ed6e
Flags: needinfo?(dminor)
Ryan, do you mind checking that this fixes the problem? I wasn't able to easily get a build with the patch you supplied.
Assignee: nobody → dminor
Status: NEW → ASSIGNED
Flags: needinfo?(dminor) → needinfo?(ryanvm)
Comment on attachment 8918932 [details] Bug 1408582 - Fix unused variable warning in CSFLog.cpp on Android; Works great, thanks!
Flags: needinfo?(ryanvm)
Attachment #8918932 - Flags: feedback+
Rank: 22
Priority: -- → P1
Rank: 22 → 15
Priority: P1 → P2
Comment on attachment 8918932 [details] Bug 1408582 - Fix unused variable warning in CSFLog.cpp on Android; https://reviewboard.mozilla.org/r/189832/#review196112 LGTM Note: this is going to cause a merge conflict with the other patch over in bug 1402334 which I just r+.
Attachment #8918932 - Flags: review?(drno) → review+
Pushed by dminor@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/3db1a494406d Fix unused variable warning in CSFLog.cpp on Android; r=drno
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla58
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: