Bug 1408582 - Fix unused variable warning in CSFLog.cpp on Android; r=drno

MozReview-Commit-ID: 2PZyw40eMaF